<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textStyle="bold"
        android:text="@string/R_string1"
        android:gravity="center"
        android:textColor="#808080"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textStyle="bold"
        android:text="@string/R_string2"
        android:gravity="center"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="start"
        android:text="@string/R_string3"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string4"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string5"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string6"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string7"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string8"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView9"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string9"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView10"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string10"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView11"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string11"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView12"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string12"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>




    <TextView
        android:id="@+id/textView13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textStyle="bold"
        android:text="@string/R_string13"
        android:gravity="center"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        >
    </TextView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string14"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView15"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string15"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView16"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string16"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView17"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string17"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/textView18"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/R_string18"
        android:gravity="start"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </TextView>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="start"
        android:text="@string/R_string19"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

    </TextView>

    <TextView
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#808080"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </TextView>

    <Button
        android:id="@+id/web"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="@drawable/buttonshape2"
        android:textStyle="bold"
        android:text="@string/web"
        android:gravity="center"
        android:textColor="#808080"
        app:layout_constraintRight_toRightOf="@+id/git"
        app:layout_constraintLeft_toLeftOf="@+id/git"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:onClick="onClickGoWeb"
        >
    </Button>

    <Button
        android:id="@+id/git"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:background="@drawable/buttonshape2"
        android:text="@string/git"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#808080"
        app:layout_constraintRight_toRightOf="@+id/startApp"
        app:layout_constraintLeft_toLeftOf="@+id/startApp"
        app:layout_constraintBottom_toTopOf="@+id/web"
        android:layout_marginBottom="10dp"
        android:onClick="onClickGoGit"
        >
    </Button>

    <Button
        android:id="@+id/setEng"
        android:layout_height="40dp"
        android:layout_width="70dp"
        android:textColor="@color/color"
        android:background="@drawable/buttonshape"
        android:text="@string/setEng"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:onClick="onClickSetEng"
        app:layout_constraintRight_toLeftOf="@+id/startApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/git"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        >
    </Button>

    <Button
        android:id="@+id/setRus"
        android:layout_height="40dp"
        android:layout_width="70dp"
        android:textColor="@color/color"
        android:background="@drawable/buttonshape"
        android:text="@string/setRus"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceBody1"
        android:onClick="onClickSetRus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/startApp"
        app:layout_constraintBottom_toTopOf="@+id/git"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        >
    </Button>

    <Button
        android:id="@+id/startApp"
        android:layout_height="40dp"
        android:layout_width="70dp"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:background="@drawable/buttonshape"
        android:text="@string/startApp"
        android:textStyle="bold"
        android:onClick="onClickStartApp"
        app:layout_constraintRight_toRightOf="@+id/setRus"
        app:layout_constraintLeft_toLeftOf="@+id/setEng"
        app:layout_constraintBottom_toTopOf="@+id/git"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>