<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="@+id/imageTesla"
        app:layout_constraintLeft_toLeftOf="@+id/imageTesla"
        app:layout_constraintBottom_toTopOf="@+id/imageTesla"
        android:layout_marginBottom="10dp"
        android:gravity="center">
    </TextView>
    <ImageView
        android:id="@+id/imageTesla"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">
    </ImageView>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:textStyle="bold"
        android:text="@string/price"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageTesla"
        app:layout_constraintRight_toRightOf="@+id/imageTesla"
        app:layout_constraintTop_toBottomOf="@+id/imageTesla">

    </TextView>

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/changed"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageTesla"
        app:layout_constraintRight_toRightOf="@+id/imageTesla"
        app:layout_constraintTop_toBottomOf="@+id/imageTesla">

    </TextView>
    <TextView
        android:id="@+id/showPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@+id/price"
        app:layout_constraintLeft_toLeftOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price"
        android:layout_marginTop="5dp"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/indexFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="#808080"
        app:layout_constraintRight_toLeftOf="@+id/showChange"
        app:layout_constraintBottom_toBottomOf="@+id/showChange"
        app:layout_constraintTop_toTopOf="@+id/showChange"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        >
    </TextView>

    <TextView
        android:id="@+id/showChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="@+id/change"
        app:layout_constraintLeft_toLeftOf="@+id/change"
        app:layout_constraintTop_toBottomOf="@+id/change"
        android:layout_marginTop="5dp"
        android:gravity="center">
    </TextView>
    <ImageView
        android:id="@+id/upDown"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toRightOf="@+id/showChange"
        app:layout_constraintTop_toTopOf="@+id/showChange"
        app:layout_constraintBottom_toBottomOf="@+id/showChange"
        android:gravity="center"
        android:layout_marginStart="10dp">
    </ImageView>

    <TextView
        android:id="@+id/divident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/divident"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="@+id/imageTesla"
        app:layout_constraintRight_toRightOf="@+id/imageTesla"
        app:layout_constraintTop_toBottomOf="@+id/imageTesla" />

    <TextView
        android:id="@+id/showDivident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_slab"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/divident"
        app:layout_constraintRight_toRightOf="@+id/divident"
        app:layout_constraintTop_toBottomOf="@+id/divident">

    </TextView>

    <Button
        android:id="@+id/getSearch"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color"
        android:background="@drawable/buttonshape"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/addToFavorites"
        android:textStyle="bold"
        android:onClick="onClickAddOrRemoveFromFavorites"
        app:layout_constraintRight_toLeftOf="@+id/showHistory"
        app:layout_constraintLeft_toLeftOf="@+id/imageTesla"
        app:layout_constraintTop_toBottomOf="@+id/showPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >
    </Button>
    <Button
        android:id="@+id/showHistory"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color"
        android:background="@drawable/buttonshape"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/showHistory"
        android:textStyle="bold"
        android:onClick="onClickShowHistory"
        android:layout_marginStart="20dp"
        app:layout_constraintRight_toRightOf="@+id/imageTesla"
        app:layout_constraintLeft_toRightOf="@+id/getSearch"
        app:layout_constraintTop_toBottomOf="@+id/showPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>