<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:id="@+id/l"
    android:background="@drawable/buttonshape"
    android:layout_marginRight="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginStart="5dp">

    <TextView
        android:id="@+id/symbolPrice"
        android:layout_width="100dp"
        android:layout_height="35dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/color"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/ticker_of_company"
        android:gravity="center"
        android:textColor="@color/color"
        app:layout_constraintTop_toTopOf="@+id/MARK"
        app:layout_constraintBottom_toBottomOf="@+id/MARK"
        app:layout_constraintRight_toLeftOf="@+id/MARK"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="140dp">
    </TextView>
    <TextView
        android:id="@+id/showSymbolPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        android:textColor="#808080"
        app:layout_constraintTop_toBottomOf="@+id/symbolPrice"
        app:layout_constraintRight_toRightOf="@+id/symbolPrice"
        app:layout_constraintLeft_toLeftOf="@+id/symbolPrice"
        >
    </TextView>

    <TextView
        android:id="@+id/datePrice"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/color"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/date"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/color"
        app:layout_constraintTop_toTopOf="@+id/MARK"
        app:layout_constraintBottom_toBottomOf="@+id/MARK"
        app:layout_constraintLeft_toRightOf="@+id/MARK"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp">
    </TextView>
    <TextView
        android:id="@+id/showDatePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#808080"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/datePrice"
        app:layout_constraintLeft_toLeftOf="@+id/datePrice"
        app:layout_constraintRight_toRightOf="@+id/datePrice"
        >
    </TextView>


    <TextView
        android:id="@+id/MARK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="100dp"
       >
    </TextView>


    <TextView
        android:id="@+id/highPrice"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/color"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/high_price"
        android:gravity="center"
        android:textColor="@color/color"
        app:layout_constraintTop_toTopOf="@+id/MARK"
        app:layout_constraintBottom_toBottomOf="@+id/MARK"
        app:layout_constraintRight_toLeftOf="@+id/MARK"
        app:layout_constraintLeft_toLeftOf="@+id/symbolPrice"
        android:layout_marginBottom="80dp"
        android:layout_marginStart="40dp">
    </TextView>
    <TextView
        android:id="@+id/showHighPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#808080"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/highPrice"
        app:layout_constraintLeft_toLeftOf="@+id/highPrice"
        app:layout_constraintRight_toRightOf="@+id/highPrice"
        >
    </TextView>

    <TextView
        android:id="@+id/lowPrice"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/color"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/low_price"
        android:gravity="center"
        android:textColor="@color/color"
        app:layout_constraintTop_toTopOf="@+id/MARK"
        app:layout_constraintBottom_toBottomOf="@+id/MARK"
        app:layout_constraintRight_toLeftOf="@+id/MARK"
        app:layout_constraintLeft_toLeftOf="@+id/symbolPrice"
        android:layout_marginTop="35dp"
        android:layout_marginStart="40dp">
    </TextView>
    <TextView
        android:id="@+id/showLowPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#808080"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/lowPrice"
        app:layout_constraintLeft_toLeftOf="@+id/lowPrice"
        app:layout_constraintRight_toRightOf="@+id/lowPrice"
        >
    </TextView>

    <TextView
        android:id="@+id/closePrice"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/close_price"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/MARK"
        app:layout_constraintLeft_toRightOf="@+id/MARK"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MARK"
        app:strokeColor="@color/color"></TextView>
    <TextView
        android:id="@+id/showClosePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#808080"
        android:textAppearance="?attr/textAppearanceBody1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/closePrice"
        app:layout_constraintLeft_toLeftOf="@+id/closePrice"
        app:layout_constraintRight_toRightOf="@+id/closePrice"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>